fix: fixing layout bug

--- a/Kirklees/partials/_vacancy-tiles.scss
+++ b/Kirklees/partials/_vacancy-tiles.scss
@@ -30,6 +30,7 @@
       background-color: rgba(0, 0, 0, 0.5);
       .homepage-tile-heading {
         font-size: 1.3rem;
+        width: 100%;
       }
       .vacancy-count {
         font-size: 0.95rem;
